# esp_poris_base

./: .gitignore  CMakeLists.txt  README.md  esp_idf_project_configuration.json  sdkconfig  sdkconfig.defaults
buildcfg/: C5Devkit.cmakecache.cmake  C5Devkit.components.cmake  C5Devkit.env  C6DevKitUSB.cmakecache.cmake  C6DevKitUSB.components.cmake  C6DevKitUSB.env  S34DSTouchScreen.components.cmake  S34DSTouchScreen.env  S3PoE.components.cmake  S3PoE.env  S3TouchScreen.components.cmake  S3TouchScreen.env  S3WifiLCD.components.cmake  sdkconfig.C5Devkit.defaults  sdkconfig.C6DevKitUSB.defaults  sdkconfig.C6Devkit.defaults  sdkconfig.S34DSTouchScreen.defaults  sdkconfig.S3PoE.defaults  sdkconfig.S3TouchScreen.defaults  sdkconfig.S3WifiLCD.defaults
buildcfg/sdkconfig_backups/: .gitignore
components/DualLED/: CMakeLists.txt  DualLED.c  DualLED_netvars.c  DualLED_netvars_fragment.c_  Kconfig.projbuild  netvars.csv
components/DualLED/include/: DualLED.h  DualLED_netvar_types_fragment.h_  DualLED_netvars.h
components/DualLedTester/: CMakeLists.txt  DualLedTester.c  DualLedTester_netvars.c  DualLedTester_netvars_fragment.c_  Kconfig.projbuild
components/DualLedTester/include/: DualLedTester.h  DualLedTester_netvar_types_fragment.h_  DualLedTester_netvars.h
components/HelloWorld/: CMakeLists.txt  HelloWorld.c  Kconfig.projbuild
components/HelloWorld/include/: HelloWorld.h
components/LcdScreen/: CMakeLists.txt  Kconfig.projbuild  LcdScreen.c  LcdScreen_netvars.c  LcdScreen_netvars_fragment.c_  netvars.csv
components/LcdScreen/include/: LcdScreen.h  LcdScreen_netvar_types_fragment.h_  LcdScreen_netvars.h
components/MQTTComm/: CMakeLists.txt  Kconfig.projbuild  MQTTComm.c  MQTTComm_netvars.c  MQTTComm_netvars_fragment.c_  README.md
components/MQTTComm/include/: .gitignore  MQTTComm.h  MQTTComm_netvar_types_fragment.h_  MQTTComm_netvars.h  MqttSecrets.h.example
components/Measurement/: CMakeLists.txt  Kconfig.projbuild  Measurement.c  Measurement_cmd.c  Measurement_netvars.c  Measurement_netvars_fragment.c_  Measurement_nvs.c  Measurement_nvs.h  netvars.csv
components/Measurement/include/: Measurement.h  Measurement_cmd.h  Measurement_netvar_types_fragment.h_  Measurement_netvars.h
components/NetVars/: CMakeLists.txt  NetVars.c
components/NetVars/include/: NetVars.h
components/OTA/: CMakeLists.txt  Kconfig.projbuild  OTA.c  OTA_netvars.c
components/OTA/include/: OTA.h  OTA_netvars.h
components/OtCoap/: CMakeLists.txt  Kconfig.projbuild  OtCoap.c
components/OtCoap/include/: OtCoap.h
components/PrjCfg/: CMakeLists.txt  Kconfig.projbuild  PrjCfg.c  PrjCfg_JSON.c  PrjCfg_cmd.c  PrjCfg_netvars.c  PrjCfg_netvars_fragment.c_  PrjCfg_nvs.c  PrjCfg_nvs.h  netvars.csv
components/PrjCfg/include/: PrjCfg.h  PrjCfg_cmd.h  PrjCfg_netvar_types_fragment.h_  PrjCfg_netvars.h
components/Provisioning/: CMakeLists.txt  Kconfig.projbuild  Provisioning.c  Provisioning_netvars.c  Provisioning_netvars_fragment.c_  netvars.csv
components/Provisioning/include/: Provisioning.h  Provisioning_netvar_types_fragment.h_  Provisioning_netvars.h
components/Relays/: CMakeLists.txt  Kconfig.projbuild  Relays.c  Relays_netvars.c  Relays_netvars_fragment.c_
components/Relays/include/: Relays.h  Relays_netvar_types_fragment.h_  Relays_netvars.h
components/RelaysTest/: CMakeLists.txt  Kconfig.projbuild  RelaysTest.c  RelaysTest_netvars.c  RelaysTest_netvars_fragment.c_  netvars.csv
components/RelaysTest/include/: RelaysTest.h  RelaysTest_netvar_types_fragment.h_  RelaysTest_netvars.h
components/TouchScreen/: CMakeLists.txt  Kconfig.projbuild  TouchScreen.c  TouchScreen_display_4ds.c  TouchScreen_netvars_fragment.c_  lvgl_port.c  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
components/TouchScreen/include/: TouchScreen.h  TouchScreen_netvar_types_fragment.h_  lvgl_port.h
components/UDPComm/: CMakeLists.txt  Kconfig.projbuild  UDPComm.c  UDPComm_netvars.c  UDPComm_netvars_fragment.c_
components/UDPComm/include/: UDPComm.h  UDPComm_netvar_types_fragment.h_  UDPComm_netvars.h
components/UIDemo/: CMakeLists.txt  Kconfig.projbuild  UIDemo.c  UIDemo_netvars.c  UIDemo_netvars_fragment.c_
components/UIDemo/assets/: ui_tokens.txt  ui_tokens.yaml
components/UIDemo/include/: UIDemo.h  UIDemo_netvar_types_fragment.h_  UIDemo_netvars.h
components/Wifi/: .gitignore  CMakeLists.txt  Kconfig.projbuild  Wifi.c  WifiSecrets.h.example  Wifi_netvars.c  Wifi_netvars_fragment.c_  netvars.csv
components/Wifi/include/: Wifi.h  Wifi_netvar_types_fragment.h_  Wifi_netvars.h
main/: CMakeLists.txt  app_main.c  main_netvars.c
poris/: LICENSE.md  gen_configs.py  gen_netvars.py  new_component.py
poris/templates/$$1/: $$1.c  Kconfig.projbuild
poris/templates/$$1/include/: $$1.h
sdkcfg/: feat_lcd_1p47.defaults  feat_s34ds_touch.defaults  feat_s3_poe.defaults  feat_touchscreen4ds_lvgl.defaults  target_esp32c5.defaults  target_esp32c6.defaults  target_esp32s3.defaults
sdkconfig/: feat_minimal.defaults  stack_openthread.defaults
tools/: build.sh  ensure_variant.py  gen_configs.py  gen_variant.py  new_component.py  prebuild.sh
tools/templates/$$1/: $$1.c  CMakeLists.txt  Kconfig.projbuild
tools/templates/$$1/include/: $$1.h
variants/: variants.yml
